리스트 출력, 글쓰기

--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -2,6 +2,6 @@
 <header>
     <div style="display: flex;margin: 15px" >
     <img width="15%" alt="" th:src="@{/images/logo2.png}"/>
-    <b style="font-size:32pt;margin-left: 20px">SpringBoot + JPA 게시판</b>
+    <b style="font-size:32pt;margin-left: 20px">SpringBoot + Mybatis 게시판</b>
     </div>
 </header>
