--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -49,7 +49,7 @@
                 <span th:text="${board.writer}"></span>
             </td>
             <td>
-                <span th:text="${#temporals.format(board.createdDate, 'yyyy-MM-dd HH:mm')}"></span>
+                <span th:text="${#temporals.format(board.created_date, 'yyyy-MM-dd HH:mm')}"></span>
             </td>
         </tr>
         </tbody>
